--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#" data-section="Landscapes">Landscapes</a></li>
                 <li><a href="#" data-section="Studio">Studio</a></li>
                 <li><a href="#" data-section="BlackWhite">Black&White</a></li>
-                <li><a href="#" data-section="nothing"></a></li>
+                <li><a href="#" data-section="Urban">Urban</a></li>
                 <li><a href="#" id="about-link">No Photis!</a></li>
             </ul>
         </nav>
