--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <!-- Les imatges es carregaran aquí mitjançant JavaScript -->
             </div>
             <div id="full-image-view">
-                <button id="prev-image" class="nav-button">&lt;</button>
+                <button id="prev-image" class="nav-button"><img src="img/prev.png" alt="Prev"></button>
                 <div id="full-image-container">
                     <img id="full-image" src="" alt="">
                     <div id="image-name"></div>
                 </div>
-                <button id="next-image" class="nav-button">&gt;</button>
+                <button id="next-image" class="nav-button"><img src="img/next.png" alt="Next"></button>
             </div>
         </section>
 
