--- a/index.html
+++ b/index.html
@@ -36,21 +36,29 @@
             </div>
         </section>
 
-        <section id="about">
-            <h2>Fotògraf (Photographer)</h2>
-            <div id="about-content">
-                <a href="https://www.instagram.com/no.photis" target="_blank"> <img src="img/about_image.jpg" alt="ImatgeAutor" style="width:150px; float:left; margin-right:10px;"> </a>
-                <p>Fotògraf des de ben petit, capturant instants !<br>
-  Instagram: <a href="https://www.instagram.com/no.photis" target="_blank">@no.photis</a>, 
-  <a href="https://www.instagram.com/no.photis.studio" target="_blank">@no.photis.studio</a>
-</p>
-                <div style="clear:both;"></div>
+<section id="about">
+    <h2>Fotògraf - Photographer</h2>
+
+    <!-- Subtítol -->
+    <p>Capturant instants !</p>
+
+    <div id="about-content">
+        <a href="https://www.instagram.com/no.photis" target="_blank">
+            <img src="img/NoPhotis.png" alt="No Photis"
+                 style="width:250px; float:left; margin-right:10px;">
+        </a>
+
+        <a href="https://www.instagram.com/no.photis.studio" target="_blank">
+            <img src="img/NoPhotisStudio.png" alt="No Photis Studio"
+                 style="width:250px; float:left; margin-right:10px;">
+        </a>
+               <div style="clear:both;"></div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy;2025 All rights reserved. Contact via Instagram for inquiries.</p>
+        <p>&copy;2025 All rights reserved. Contact via Instagram @no.photis for inquiries.</p>
     </footer>
 
     <script src="script.js"></script>
