--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
 
-    <header>
+    <header> 
+        <a href="https://www.instagram.com/no.photis" target="_blank">
+            <img src="img/NoPhotis.png" alt="No Photis"
+                 style="width:100px; margin-right:10px;">
+        </a>
         <nav>
             <ul>
                 <li><a href="#" data-section="Colors">Colors</a></li>
@@ -16,6 +20,9 @@
                 <li><a href="#" data-section="Studio">Studio</a></li>
                 <li><a href="#" data-section="BlackWhite">Black&White</a></li>
                 <li><a href="#" data-section="Urban">Urban</a></li>
+                <li><a href="#" data-section="Sky">Sky</a></li>
+                <li><a href="#" data-section="Aerial">Aerial</a></li>
+                <li><a href="#" data-section="Macro">Macro</a></li>
                 <li><a href="#" id="about-link">No Photis!</a></li>
             </ul>
         </nav>
