--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#" data-section="Sky">Sky</a></li>
                 <li><a href="#" data-section="Aerial">Aerial</a></li>
                 <li><a href="#" data-section="Macro">Macro</a></li>
-                <li><a href="#" id="about-link">No Photis!</a></li>
+<!--                <li><a href="#" id="about-link">No Photis!</a></li> -->
             </ul>
         </nav>
     </header>
@@ -43,9 +43,11 @@
             </div>
         </section>
 
+<!--
     <section id="about">
       <p>Capturant instants !</p>
         </section>
+-->
     </main>
 
     <footer>
