--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="#" data-section="Colors">Colors</a></li>
-                <li><a href="#" data-section="Landscapes">Nature</a></li>
+                <li><a href="#" data-section="Landscapes">Landscapes</a></li>
                 <li><a href="#" data-section="Studio">Studio Color</a></li>
                 <li><a href="#" data-section="BlackWhite">Studio B&W</a></li>
                 <li><a href="#" data-section="Urban">Urban</a></li>
